[package]
name = "mvtinfo"
version = "0.1.7"
description = "Dump info of mapbox vector tile"
authors = ["wsw0108 <wsw0108@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
reqwest = { version = "0.11.11", features = ["gzip", "blocking"] }
protobuf = { version = "2.4.0", features = ["with-bytes"] }
libflate = "0.1.25"

[build-dependencies]
protoc-rust = "2.4.0"
